--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ const locale = Astro.currentLocale!
     <slot name="head" />
   </head>
   <body class="flex flex-col">
-    <header>
+    <header class="z-1">
       <slot name="header" />
     </header>
     <main class="flex-1">
