--- a/src/components/navigation/footer/Footer.astro
+++ b/src/components/navigation/footer/Footer.astro
@@ -7,12 +7,14 @@ import IconButton from '~/components/common/IconButton.astro'
 
 import { getNavigationTranslations } from '~/data/get-navigation-translations'
 import { getCategoryLinks } from '~/data/get-category-links'
+import { getLinkToPage } from '~/data/get-link-to-page'
 
 import IrenaLogo from '~/assets/brand/wordmark.svg'
 import IconFacebook from '~icons/bxl/facebook-circle'
 import IconMessenger from '~icons/bxl/messenger'
 import IconWhatsapp from '~icons/bxl/whatsapp'
 import IconTelegram from '~icons/bxl/telegram'
+
 // import IconGithub from '~icons/bxl/github'
 
 
@@ -36,6 +38,9 @@ const t = {
 }
 
 const categoryLinks = await getCategoryLinks(locale)
+
+const contactsLink = await getLinkToPage(locale, 'contacts')
+const privacyLink = await getLinkToPage(locale, 'privacy')
 
 ---
 
@@ -93,7 +98,14 @@ const categoryLinks = await getCategoryLinks(locale)
           <h3 class="text-zinc-900 font-semibold md:(text-sm leading-6)">{ t.aboutUs }</h3>
           <ul role="list" class="mt-6 space-y-4">
             <li>
-              <FooterItem as="a" href="/">{ t.contacts }</FooterItem>
+              <FooterItem as="a" href={contactsLink}>
+                { t.contacts }
+              </FooterItem>
+            </li>
+            <li>
+              <FooterItem as="a" href={privacyLink}>
+                { t.privacyPolicy }
+              </FooterItem>
             </li>
           </ul>
         </div>
@@ -108,7 +120,16 @@ const categoryLinks = await getCategoryLinks(locale)
           </p>
         </div>
         <div>
-          <p>{ t.privacy }</p>
+          <div class="max-w-xs">
+            <p class="inline">{ t.privacy }</p>
+            <a
+              href={privacyLink}
+              hreflang={locale}
+              class="text-zinc-700 underline underline-offset-3 hover:(text-zinc-900 no-underline)"
+            >
+              { t.privacyPolicy }
+            </a>
+          </div>
           <p>&copy; 2024 Irena. { t.copyright }</p>
         </div>
       </div>
