--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,7 +18,7 @@ const locale = Astro.currentLocale!
     <header class="z-1">
       <slot name="header" />
     </header>
-    <main class="flex-1">
+    <main id="content" class="flex-1">
       <slot />
     </main>
     <footer>
