--- a/src/pages/[...locale]/[...categoryId]/[...page].astro
+++ b/src/pages/[...locale]/[...categoryId]/[...page].astro
@@ -11,7 +11,7 @@ import ProductCard from '~/components/product/card/ProductCard.astro'
 import CategoriesList from '~/components/product/category/CategoriesList.astro'
 import { CategoriesMenu } from '~/components/product/category/CategoriesMenu.tsx'
 import IconButton from '~/components/common/IconButton.astro'
-import { Pagination } from '~/components/navigation'
+import { LocaleSwitcher, Pagination } from '~/components/navigation'
 
 import IconArrowDown from '~icons/material-symbols/arrow-drop-down-rounded'
 import IconClose from '~icons/material-symbols/close-rounded'
@@ -71,9 +71,17 @@ const t = useTranslations({
   data: { ...translations?.data, ...paginationTranslations?.data },
 })
 
+const altCategories = (
+  await getCollection('categories', ({ data }) => data.canonicalId === category.data.canonicalId)
+).map(category => category.id)
+
 ---
 
 <HomeLayout>
+  <LocaleSwitcher
+    slot="locale-switcher"
+    links={altCategories}
+  />
   <Container>
     <div class="py-16 lg:py-24">
       <div class="mx-auto max-w-2xl lg:max-w-none space-y-6">
