--- a/src/components/navigation/LocaleSwitcher.astro
+++ b/src/components/navigation/LocaleSwitcher.astro
@@ -1,28 +1,24 @@
 ---
-import { getRelativeLocaleUrl } from 'astro:i18n'
-import { locales } from '~/utils/i18n'
+import { getAltLinks } from '~/data/get-alt-links'
 
 interface Props {
   // TODO: maybe make this type a bit better
   links: string[]
 }
 
+const locale = Astro.currentLocale!
 const { links } = Astro.props
 
 ---
 
 <div class="flex items-center justify-end gap-6">
-  {locales.map((locale) => {
-    const link = links.find(link => link.startsWith(`${locale}/`))
-
-    return (
-      <a
-        href={link !== undefined ? getRelativeLocaleUrl(locale, link.slice(2)) : getRelativeLocaleUrl(locale, '/')}
-        hreflang={locale}
-        class="text-sm text-zinc-500 font-medium tracking-wide uppercase hover:text-zinc-600"
-      >
-        { locale.toLocaleUpperCase(locale) }
-      </a>
-    )
-  })}
+  {getAltLinks(links).map(({ href, hrefLang }) => (
+    <a
+      href={href}
+      hreflang={hrefLang}
+      class="text-sm text-zinc-500 font-medium tracking-wide uppercase hover:text-zinc-600"
+    >
+      { hrefLang.toLocaleUpperCase(locale) }
+    </a>
+  ))}
 </div>
