--- a/src/pages/[...locale]/[slug].astro
+++ b/src/pages/[...locale]/[slug].astro
@@ -1,7 +1,6 @@
 ---
 import type { GetStaticPaths } from 'astro'
 import { getCollection, getEntry } from 'astro:content'
-import { getImage } from 'astro:assets'
 import { format, useTranslations } from 'astro-nanointl'
 import { isDefaultLocale } from '~/utils/i18n'
 
@@ -10,7 +9,6 @@ import Container from '~/components/common/Container.html'
 import Head from '~/components/common/Head.astro'
 import { BrandPattern } from '~/components/marketing'
 import { LocaleSwitcher } from '~/components/navigation'
-import OpenGraphImage from '~/assets/og.png'
 
 
 export const getStaticPaths = (async () => {
@@ -34,23 +32,16 @@ const { page } = Astro.props
 const { Content } = await page.render()
 
 const translations = await getEntry('translations', `${locale}/components/marketing/legal`)
-const ogTranslations = await getEntry('translations', `${locale}/components/marketing/og`)
 const t = useTranslations({
   lastUpdate: 'Last updated',
-
-  ogTitle: 'Homemade confectionery products made from natural ingredients. Discover our products right now!',
-  ogDescription: 'Mini-patisserie "Irena"',
-  ogImageAlt: 'OpenGraph image with the title and logo of the mini-patisserie "Irena"',
 }, {
   locale,
-  data: { ...translations?.data, ...ogTranslations?.data },
+  data: translations?.data,
 })
 
 const altPages = (
   await getCollection('pages', ({ data }) => data.canonicalId === page.data.canonicalId)
 ).map(page => page.slug)
-
-const ogImage = await getImage({ src: OpenGraphImage, format: 'webp' })
 
 ---
 
@@ -60,21 +51,6 @@ const ogImage = await getImage({ src: OpenGraphImage, format: 'webp' })
     title={page.data.title}
     description={page.data.description}
     languageAlternates={altPages}
-    openGraph={{
-      basic: {
-        title: `${page.data.title} - ${t.ogTitle}`,
-        type: 'website',
-        image: ogImage.src,
-      },
-      image: {
-        alt: t.ogImageAlt,
-        type: 'image/webp',
-      },
-      optional: {
-        description: t.ogDescription,
-        locale,
-      },
-    }}
   />
   <LocaleSwitcher
     slot="locale-switcher"
@@ -87,17 +63,18 @@ const ogImage = await getImage({ src: OpenGraphImage, format: 'webp' })
         <div class="mx-auto max-w-2xl lg:max-w-none">
           <h1 class="text-3xl font-bold tracking-tight hyphens-auto sm:text-4xl">{ page.data.title }</h1>
           <p class="mt-6 text-indigo-100 leading-7">
-            {page.data.description}
-            {page.data.updatedAt && (
-              <>
-                { t.lastUpdate }
-                <time datetime={page.data.updatedAt.toISOString()}>
-                  {format(locale).date(page.data.updatedAt, {
-                    dateStyle: 'short',
-                  })}
-                </time>
-              </>
-            )}
+            {page.data.updatedAt
+              ? (
+                  <>
+                    { t.lastUpdate }
+                    <time datetime={page.data.updatedAt.toISOString()}>
+                      {format(locale).date(page.data.updatedAt, {
+                        dateStyle: 'short',
+                      })}
+                    </time>
+                  </>
+                )
+              : page.data.description}
           </p>
         </div>
       </div>
@@ -112,27 +89,4 @@ const ogImage = await getImage({ src: OpenGraphImage, format: 'webp' })
       </div>
     </div>
   </Container>
-  {/* <Container>
-    <div class="py-16 lg:py-24">
-      <div class="mx-auto max-w-2xl lg:max-w-none space-y-6">
-        <div>
-          <h1 class="text-3xl font-bold tracking-tight hyphens-auto sm:text-4xl">{ page.data.title }</h1>
-          {page.data.updatedAt && (
-            <p class="mt-6 text-zinc-700">
-              { t.lastUpdate }
-              <time datetime={page.data.updatedAt.toISOString()}>
-                {format(locale).date(page.data.updatedAt, {
-                  dateStyle: 'short',
-                })}
-              </time>
-            </p>
-          )}
-        </div>
-        <hr />
-        <div class="underline-offset-5 prose prose-zinc">
-          <Content />
-        </div>
-      </div>
-    </div>
-  </Container> */}
 </HomeLayout>
